<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lite3_sim_description</name>
  <version>0.1.0</version>
  <description>URDF/Xacro description for the Lite3 omnidirectional mobile base with Livox Mid-360.</description>
  <maintainer email="mingqian.chen@tum.de">mingqian</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>gazebo_ros</depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>livox_laser_simulation_ROS2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
